--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 30px 0;
-  background-color: #111117;
+  background-color: black;
 }
 
 .container {
